[package]
  name = "what_the_time"
  version = "1.0.0"
  authors = ["Stephen Ball <sdball@gmail.com>"]
  edition = "2018"

  # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
  clap = { version = "4.5.4", features = ["derive"] }
  serde = { version = "1.0", features = ["derive"] }
  serde_json = "1.0"
  chrono = "0.4"

[[bin]]
  name = "wtt"
  path = "src/main.rs"
